Redid sponsor landing page, added formatting for mobile

--- a/sponsor.html
+++ b/sponsor.html
@@ -31,6 +31,13 @@
             </div>
         </header>
         <div class="content">
+            <div class="sponsor_social_media">
+                <a href="https://x.com/shamelesspp_"><p class="sponsor_social_media_icons"><i class="lni lni-twitter"></i></p></a>
+                <a href="https://www.instagram.com/shameless_pp/"><p class="sponsor_social_media_icons"><i class="lni lni-instagram"></i></p></a>
+                <a href="https://www.facebook.com/people/Shameless-Product-Placement/61562847600204/"><p class="sponsor_social_media_icons"><i class="lni lni-facebook"></i></p></a>
+                <a href="https://www.tiktok.com/@shamelesspp"><p class="sponsor_social_media_icons"><i class="lni lni-tiktok-alt"></i></p></a>
+                <a href="https://www.linkedin.com/company/shamelessproductplacement/"><p class="sponsor_social_media_icons"><i class="lni lni-linkedin"></i></p></a>
+            </div>
             <a href="home.html">
                 <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
             </a>
@@ -40,17 +47,19 @@
             </div>
             <div id="sponsor_overlay">
                 <div id="sponsor_information">
-                    <p id="sponsor_title">Why sponsor us?</p>
+                    <p id="sponsor_title">Revolutionizing In-Game Advertising</p>
                     <div class="sponsor_information_part_1">
                         <p id="sponsor_details_part_1">
-                            Sponsoring Shameless Product Placement offers a unique opportunity to significantly boost your brand’s visibility and market presence through strategic in-game marketing. By partnering with Shameless Product Placement, your company will benefit from seamlessly integrated product placements within our games of your choice, reaching a vast audience of engaged gamers who align with your target demographic. This collaboration not only enhances brand awareness but also fosters a direct connection with consumers in an interactive and immersive environment. Through tailored marketing strategies and creative placements, your product will be showcased in a natural and effective manner, ensuring maximum impact and recall among gamers. Embrace this opportunity to elevate your brand’s visibility and market influence with Shameless Product Placement, where effective marketing meets interactive entertainment seamlessly.
+                            Shameless Product Placement is the latest innovation in advertising, transforming the way brands connect with elusive audiences. We partner with brands and advertisers to integrate virtual ads seamlessly within our games, eliminating the notion that ads are to be skipped. When advertisements are a core part of the gameplay, they become part of the fun!<br><br>
+                            Sponsoring Shameless Product Placement provides a unique opportunity to significantly boost your brand's visibility and market presence through strategic in-game marketing. By partnering with us, your company will benefit from integrated product placements in the games of your choice, reaching a vast audience of engaged gamers who align with your target demographic.
                         </p>
                         <img id="sponsor_example_1" src="assets/sponsor_example_1.png" alt="Sponsor Example 1">
                     </div>
                     <div class="sponsor_information_part_2">
                         <img id="sponsor_example_2" src="assets/sponsor_example_2.png" alt="Sponsor Example 2">
                         <p id="sponsor_details_part_2">
-                            Buy a sponsor now and we will literally place your product into our newest game, Shih Zoo. You can pick exactly where in the game you want to appear, upload different art, and give exact instructions on what you want us to do! Right now, we even offer a free trial, where we will show you exactly what your product or advertisement will look like in our creations. Any inquiries are welcome, definitely contact us if you are thinking of something outside the box, because the possibilities are endless! Price specifics can be discussed with our founder, Charles J. Conlan.
+                            This collaboration not only enhances brand awareness but also fosters a direct connection with consumers in an interactive and immersive environment. Through tailored marketing strategies and creative placements, your product will be showcased naturally and effectively, ensuring maximum impact and recall among gamers. Embrace this opportunity to elevate your brand's visibility and market influence with Shameless Product Placement, where effective marketing meets interactive entertainment seamlessly.<br><br>
+                            Become a sponsor today, and we'll place your product in our latest game, Shih Zoo. You can choose exactly where in the game you want to appear, upload custom artwork, and provide specific instructions for implementation. We even offer a <a id="free_trial_redirect" href="#sponsor_contact_button">free trial</a> to show you what your product or advertisement will look like in our creations. For inquiries, or if you have any unique ideas, contact us-- because the possibilities are endless!
                         </p>
                     </div>
                 </div>
@@ -60,51 +69,47 @@
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1>Invest in Shameless Product Placement!</h1>
+                        <h1>Sponsor Shameless Product Placement!</h1>
                         <button id="sponsor_options_menu_close_button" type="button" class="close" data-dismiss="modal">×</button>
                     </div>
                     <div class="modal-body">
                         <div class="sponsor_options_menu_options">
+                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_game_levels.png" alt="Sponsor Game Levels">
+                            <p class="sponsor_options_menu_titles">Game Levels</p>
+                            <p class="sponsor_options_menu_values">$</p>
+                            <p class="sponsor_options_menu_descriptions">
+                                Embark on your gaming journey!<br><br>
+                                We will create an exciting world of that reinforces your brand's value and image. Unlike traditional advertisement, your targeted community will be able to interact with your products and services virtually. In this way, your ad is no longer viewed as a necessary evil to engage with the viewer's desired content, but it becomes the content itself! It's a sea change!
+                            </p>
+                            <p class="sponsor_options_menu_benefits_title">Benefits:</p>
+                            <ul class="sponsor_options_menu_benefits">
+                                <li>Our gratitude</li>
+                            </ul>
+                        </div>
+                        <div class="sponsor_options_menu_options">
+                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_characters.png" alt="Sponsor Characters">
+                            <p class="sponsor_options_menu_titles">Create Characters, NFT's, and Collectibles</p>
+                            <p class="sponsor_options_menu_values">$</p>
+                            <p class="sponsor_options_menu_descriptions">
+                                People love characters that they identify with! We will help create lovable characters that gamers can play in their favorite games.<br><br>
+                                Also, we will create prizes like trophies, NFT's & other collectables for game fans and players.<br><br>
+                                Help your your audience conquer new dimensions, achieve greatness, and showcase their awards.
+                            </p>
+                            <p class="sponsor_options_menu_benefits_title">Benefits:</p>
+                            <ul class="sponsor_options_menu_benefits">
+                                <li>Our gratitude</li>
+                            </ul>
+                        </div>
+                        <div class="sponsor_options_menu_options">
                             <img class="sponsor_options_menu_images" src="assets/sponsor_option_product_placement.png" alt="Sponsor Product Placement">
                             <p class="sponsor_options_menu_titles">Product Placement</p>
                             <p class="sponsor_options_menu_values">$</p>
-                            <p class="sponsor_options_menu_descriptions">Unlock endless possibilities by having your product or logo be featured in our games.</p>
+                            <p class="sponsor_options_menu_descriptions">
+                                Unlock endless possibilities by having your game level, characters and/or prizes as an integral part of popular video games.<br><br>
+                                Elevate your advertisement experiences to extraordinary levels and make your mark in the gaming world.
+                            </p>
                             <p class="sponsor_options_menu_benefits_title">Benefits:</p>
                             <ul class="sponsor_options_menu_benefits">
-                                <li>Your product or logo placed in-game!</li>
-                                <li>Our gratitude</li>
-                            </ul>
-                        </div>
-                        <div class="sponsor_options_menu_options">
-                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_character.png" alt="Sponsor Character">
-                            <p class="sponsor_options_menu_titles">Create a character!</p>
-                            <p class="sponsor_options_menu_values">$</p>
-                            <p class="sponsor_options_menu_descriptions">People love characters they identify with. Create a character that represents your brand to be featured in our game.</p>
-                            <p class="sponsor_options_menu_benefits_title">Benefits:</p>
-                            <ul class="sponsor_options_menu_benefits">
-                                <li>Your character placed in-game!</li>
-                                <li>Our gratitude</li>
-                            </ul>
-                        </div>
-                        <div class="sponsor_options_menu_options">
-                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_collectible.png" alt="Sponsor Collectible">
-                            <p class="sponsor_options_menu_titles">Create a collectible or NFT!</p>
-                            <p class="sponsor_options_menu_values">$</p>
-                            <p class="sponsor_options_menu_descriptions">You can create a collectable or NFT representing your brand for the playerbase to enjoy and showcase!</p>
-                            <p class="sponsor_options_menu_benefits_title">Benefits:</p>
-                            <ul class="sponsor_options_menu_benefits">
-                                <li>Your created collectible integrated into our game in a way of your choosing!</li>
-                                <li>Our gratitude</li>
-                            </ul>
-                        </div>
-                        <div class="sponsor_options_menu_options">
-                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_game_level.png" alt="Sponsor Game Level">
-                            <p class="sponsor_options_menu_titles">Create a game level!</p>
-                            <p class="sponsor_options_menu_values">$</p>
-                            <p class="sponsor_options_menu_descriptions">Your advertisement will no longer be a chore to view, as the content is now your advertisement! The players must interact with your brand if it is the content itself!</p>
-                            <p class="sponsor_options_menu_benefits_title">Benefits:</p>
-                            <ul class="sponsor_options_menu_benefits">
-                                <li>Your created level placed in-game!</li>
                                 <li>Our gratitude</li>
                             </ul>
                         </div>
