Redid investor landing page, added functionality for mobile

--- a/investor.html
+++ b/investor.html
@@ -37,30 +37,39 @@
                 </a>
                 <div class="main_investment_information">
                     <div class="video">
-                        <iframe id="shih_zoo_investment_video" src="https://www.youtube.com/embed/ScMzIvxBSi4?&theme=dark&autohide=2"frameborder="0"></iframe>
+                        <iframe id="investment_video" src="https://www.youtube.com/embed/ScMzIvxBSi4?&theme=dark&autohide=2"frameborder="0"></iframe>
                     </div>
                     <div class="investment_information">
                         <p id="title">Shameless Product Placement</p>
-                        <p id="description">World class gaming meets brand promotion.</p>
+                        <p id="description">Where world class gaming intersects brand promotion.</p>
                         <p id="invested">$_ USD from _ backers</p>
                         <button id="options" data-toggle="modal" data-target="#projects_menu">PROJECTS TO INVEST IN</button>
                         <a href="contact.html"><button id="information">GET INFORMATION</button></a>
+                        <div class="investor_social_media">
+                            <a href="https://x.com/shamelesspp_"><p class="investor_social_media_icons"><i class="lni lni-twitter"></i></p></a>
+                            <a href="https://www.instagram.com/shameless_pp/"><p class="investor_social_media_icons"><i class="lni lni-instagram"></i></p></a>
+                            <a href="https://www.facebook.com/people/Shameless-Product-Placement/61562847600204/"><p class="investor_social_media_icons"><i class="lni lni-facebook"></i></p></a>
+                            <a href="https://www.tiktok.com/@shamelesspp"><p class="investor_social_media_icons"><i class="lni lni-tiktok-alt"></i></p></a>
+                            <a href="https://www.linkedin.com/company/shamelessproductplacement/"><p class="investor_social_media_icons"><i class="lni lni-linkedin"></i></p></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="extra_investment_information">
-                <div class="faq_section">
-                    <p class="section_titles">Frequently Asked Questions</p>
-                    <p class="questions">Why should I invest in Shameless Product Placement?</p>
-                    <p class="answers">Investing in our company allows us to fund our upcoming projects, such as Shih Zoo.</p>
-                    <p class="questions">What do I get from investing in Shameless Product Placement?</p>
-                    <p class="answers">You get our endless gratitude no matter how much you invest, but each tier gets you a specific amount of perks, and you can see them by clicking the PROJECTS TO INVEST IN button at the top of the page!</p>
-                    <p class="questions">Is there anything I can do to help?</p>
-                    <p class="answers">If you have any skills you think you can offer to us, please let us know at info@shamelesspp.com!</p>
-                    <p class="questions">Where can I download your apps to try them?</p>
-                    <p class="answers">You can download them on the App Store or on the Google Play Store.</p>
-                    <p class="questions">Where can I ask questions not listed in the FAQ?</p>
-                    <p class="answers">You can email us at info@shamelesspp.com.</p>
+                <div class="extra_investment_information">
+                    <p class="section_titles">🚀 Invest in the Future of Gaming: Partner with Shameless Product Placement! 🎮</p>
+                    <p class="extra_investment_text">Early stage investment opportunities in the booming gaming industry are hard to come by. Shameless Product Placement is poised to revolutionize the gaming landscape, and we invite you to join us on this thrilling journey.</p>
+                    <p class="section_titles">Why invest in us?</p>
+                    <p class="extra_investment_subtitles">🌟 Groundbreaking Innovation</p>
+                    <p class="extra_investment_text">At Shameless, innovation is our driving force. We're committed to pushing the boundaries of sponsored gaming and delivering groundbreaking experiences that captivate players worldwide. With your investment, you'll be supporting the development of cutting-edge games that redefine the industry.</p>
+                    <p class="extra_investment_subtitles">🤝 Talented Team</p>
+                    <p class="extra_investment_text">Our team consists of young professionals with a track record of success. From visionary game designers to expert developers, we have the talent and expertise to bring our ambitious projects to life. When you invest in us, you're investing in a team that knows how to deliver results.</p>
+                    <p class="extra_investment_subtitles">💡 Lucrative Opportunities</p>
+                    <p class="extra_investment_text">The gaming industry is one of the fastest-growing sectors in entertainment, with unlimited potential for growth and profitability. By partnering with Shameless, you'll have the opportunity to capitalize on this lucrative market and maximize your returns on investment.</p>
+                    <p class="extra_investment_subtitles">🔥 Passion and Dedication</p>
+                    <p class="extra_investment_text">We're not just building games—we're building dreams. Our team is driven by a shared passion for gaming and a relentless dedication to excellence. With your investment, you'll be fueling our collective ambition to create unforgettable gaming experiences that leave a lasting impact on players around the world.</p>
+                    <p class="section_titles">Ready to seize the opportunity?</p>
+                    <div class="learn_more_button_section">
+                        <a href="contact.html"><button id="learn_more_button">Learn More</button></a>
+                    </div>
                 </div>
             </div>
         </div>
