--- a/investor.html
+++ b/investor.html
@@ -43,8 +43,10 @@
                         <p id="title">Shameless Product Placement</p>
                         <p id="description">Where world class gaming intersects brand promotion.</p>
                         <p id="invested">$_ USD from _ backers</p>
-                        <button id="options" data-toggle="modal" data-target="#projects_menu">PROJECTS TO INVEST IN</button>
-                        <a href="contact.html"><button id="information">GET INFORMATION</button></a>
+                        <div class="investment_buttons">
+                            <button id="options" data-toggle="modal" data-target="#projects_menu">PROJECTS TO INVEST IN</button>
+                            <a href="contact.html"><button id="information">GET INFORMATION</button></a>
+                        </div>
                         <div class="investor_social_media">
                             <a href="https://x.com/shamelesspp_"><p class="investor_social_media_icons"><i class="lni lni-twitter"></i></p></a>
                             <a href="https://www.instagram.com/shameless_pp/"><p class="investor_social_media_icons"><i class="lni lni-instagram"></i></p></a>
