Partner landing page rework, added mobile formatting

--- a/home.html
+++ b/home.html
@@ -107,6 +107,18 @@
                             </div>
                         </div>
                         <div class="people">
+                            <img class="people_images" id="lead_3d_artist" src="assets/xiang_zhang.png" alt="Xiang Zhang">
+                            <div class="lead_3d_artist_information">
+                                <p class="name_titles" id="lead_3d_artist_name">Lead 3D Artist Xiang Zhang</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_3d_artist_information">
+                                        Lead 3D artist with a Bachelor of Fine Arts degree from the School of Visual Art 3D Animation and VFX program. Proficient in the entire 3D Modeling, 3D Rendering, Animation, and Computer Graphics pipeline. Over 4 years of hands-on experience with industry-standard software.
+                                    </p>
+                                    <a href="www.linkedin.com/in/xiangzhang3d"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
                             <img class="people_images" id="business_advisor" src="assets/joe_conlan.png" alt="Joe Conlan">
                             <div class="business_advisor_information">
                                 <p class="name_titles" id="business_advisor_name">Business Advisor Joe Conlan</p>
