--- a/partner.html
+++ b/partner.html
@@ -31,26 +31,57 @@
             </div>
         </header>
         <div class="content">
-            <a href="index.html">
+            <div class="partner_social_media">
+                <a href="https://x.com/shamelesspp_"><p class="partner_social_media_icons"><i class="lni lni-twitter"></i></p></a>
+                <a href="https://www.instagram.com/shameless_pp/"><p class="partner_social_media_icons"><i class="lni lni-instagram"></i></p></a>
+                <a href="https://www.facebook.com/people/Shameless-Product-Placement/61562847600204/"><p class="partner_social_media_icons"><i class="lni lni-facebook"></i></p></a>
+                <a href="https://www.tiktok.com/@shamelesspp"><p class="partner_social_media_icons"><i class="lni lni-tiktok-alt"></i></p></a>
+                <a href="https://www.linkedin.com/company/shamelessproductplacement/"><p class="partner_social_media_icons"><i class="lni lni-linkedin"></i></p></a>
+            </div>
+            <a href="home.html">
                 <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
             </a>
             <div id="partner_buttons">
-                <a href="contact.html"><button id="partner_contact_button">Partner</button></a>
+                <a href="contact.html"><button id="partner_button">Partner</button></a>
             </div>
             <div id="partner_overlay">
                 <div id="partner_information">
-                    <p id="partner_title">Why partner with us?</p>
+                    <p id="partner_title">🚀 Unlock the Future of Gaming 🎮</p>
+                    <p id="partner_secondary_title">Partner with Shameless Product Placement!</p>
+                    <p id="partner_subtitle">Are you ready to revolutionize the gaming world? At Shameless Product Placement, we're on a mission to redefine the gaming experience, and we're seeking partners who share our passion and vision. If you want to build a loyal, massive audience while generating advertising revenue and sponsorship fees, let's collaborate!</p>
+                    <p id="partner_secondary_title">Why partner with us?</p>
                     <div class="partner_information_part_1">
-                        <p id="partner_details_part_1">
-                            Are you ready to revolutionize the gaming industry? At Shameless Product Placement, we are on a mission to redefine the gaming experience, and we're looking for partners who share our vision and passion. We thrive on pushing boundaries and exploring new frontiers in gaming technology. From immersive storytelling to cutting-edge graphics and gameplay mechanics, we're dedicated to creating unforgettable gaming experiences that captivate the worldwide audience. Collaboration is at the heart of everything we do. We believe that the best games are born from diverse perspectives and collective creativity. By partnering with us, you'll be joining a dynamic team that values your input and expertise every step of the way.
-                        </p>
+                        <div class="partner_information_part_1_text">
+                            <p id="partner_subtitle">🌟 Innovative Commercialization</p>
+                            <p id="partner_details_part_1">
+                                We specialize in helping game developers effectively commercialize their games by integrating product placements, character affiliations, and branded trophies or collectibles, creating a renewable stream of advertising revenue.
+                            </p>
+                            <p id="partner_subtitle">📈 Audience Growth</p>
+                            <p id="partner_details_part_1">
+                                Our concerted marketing efforts are designed to grow your audience and build a loyal fan base while making your game more attractive to potential sponsors.
+                            </p>
+                            <p id="partner_subtitle">🛍️ Merchandise Partnership</p>
+                            <p id="partner_details_part_1">
+                                We become your merchandise partner, helping you set up an additional stream of revenue while expanding your brand's reach and recognition.
+                            </p>
+                        </div>
                         <img id="partner_example_1" src="assets/partner_example_1.png" alt="Sponsor Example 1">
                     </div>
                     <div class="partner_information_part_2">
                         <img id="partner_example_2" src="assets/partner_example_2.png" alt="Sponsor Example 2">
-                        <p id="partner_details_part_2">
-                            As a start-up game developer, we offer partners the opportunity to be a part of something truly special from the ground up. With our innovative ideas and your unique skills and resources, the possibilities are endless. Together, we can shape the future of gaming and leave a lasting impact on the industry. Whether you're a publisher, technology provider, or creative collaborator, we want to hear from you. We can market your game for you, and add our little Shameless Product Placement spin on it to make you money!
-                        </p>
+                        <div class="partner_information_part_2_text">
+                            <p id="partner_subtitle">🤝 Collaborative Spirit</p>
+                            <p id="partner_details_part_2">
+                                Collaboration is at the heart of what we do. By partnering with us, you'll join a dynamic team that values your expertise and creativity.
+                            </p>
+                            <p id="partner_subtitle">🔥 Passion for Gaming</p>
+                            <p id="partner_details_part_2">
+                                Gaming isn't just what we do—it's who we are. We're driven by a shared love for gaming and a commitment to delivering experiences that resonate with players.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collaborate_button_section">
+                        <a href="contact.html"><button id="collaborate_button">Collaborate</button></a>
                     </div>
                 </div>
             </div>
