Added mobile formatting to all landing pages

--- a/careers.html
+++ b/careers.html
@@ -37,7 +37,7 @@
                     <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
                 </a>
                 <p id="careers_text">Join us on our shameless journey.</p>
-                <p id="careers_subtext">Click below to explore internship opportunities.</p>
+                <p id="careers_subtext">Click on your future role to explore internship opportunities.</p>
                 <div class="scrollable_area" id="scrollable_area">
                     <div class="careers_career">
                         <button id="game_designer" class="careers_buttons">Game Designer</button><br>
@@ -55,7 +55,9 @@
                                         <li>Experience with game mechanics</li>
                                         <li>Optional: Knowledge of 2D and 3D art creation tools (Maya, Illustrator, Photoshop, Blender, etc.)</li>
                                     </ul>
-                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    <div class="careers_apply_button_section">
+                                        <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    </div>
                                 </div>
                                 <img id="game_designer_image" class="careers_images" src="assets/game_designer.png" alt="Game Designer">
                             </div>
@@ -76,7 +78,9 @@
                                         <li>Ability to collaborate with a team</li>
                                         <li>Experience with debugging</li>
                                     </ul>
-                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    <div class="careers_apply_button_section">
+                                        <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    </div>
                                 </div>
                                 <img id="game_programmer_image" class="careers_images" src="assets/game_programmer.png" alt="Game Programmer">
                             </div>
@@ -96,7 +100,9 @@
                                         <li>Ability to collaborate with a team</li>
                                         <li>Familiarity with game engines (Unity, Unreal Engine, etc.)</li>
                                     </ul>
-                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    <div class="careers_apply_button_section">
+                                        <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    </div>
                                 </div>
                                 <img id="game_artist_image" class="careers_images" src="assets/game_artist.png" alt="Game Artist">
                             </div>
@@ -117,7 +123,9 @@
                                         <li>Familiarity with game engines (Unity, Unreal Engine, etc.)</li>
                                         <li>Passion for creating immersive audio experiences</li>
                                     </ul>
-                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    <div class="careers_apply_button_section">
+                                        <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    </div>
                                 </div>
                                 <img id="sound_designer_image" class="careers_images" src="assets/sound_designer.png" alt="Sound Designer">
                             </div>
@@ -137,7 +145,9 @@
                                         <li>Ability to collaborate with a team</li>
                                         <li>Optional: Knowledge of 2D art creation tools (Illustrator, Photoshop, XD, etc.)</li>
                                     </ul>
-                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    <div class="careers_apply_button_section">
+                                        <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    </div>
                                 </div>
                                 <img id="web_designer_image" class="careers_images" src="assets/web_designer.png" alt="Web Designer">
                             </div>
@@ -156,7 +166,9 @@
                                         <li>Ability to communicate clear and concise feedback</li>
                                         <li>Knowledge of basic game development processes and terminology</li>
                                     </ul>
-                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    <div class="careers_apply_button_section">
+                                        <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    </div>
                                 </div>
                                 <img id="game_tester_image" class="careers_images" src="assets/game_tester.png" alt="Game Tester">
                             </div>
@@ -177,7 +189,9 @@
                                         <li>Ability to organize and attend to detail</li>
                                         <li>Knowledge of basic technology and cryptocurrency (Blockchain, etc.)</li>
                                     </ul>
-                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    <div class="careers_apply_button_section">
+                                        <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    </div>
                                 </div>
                                 <img id="financier_image" class="careers_images" src="assets/financier.png" alt="Financier">
                             </div>
@@ -196,7 +210,9 @@
                                         <li>Ability to collaborate with a team</li>
                                         <li>Knowledge of basic marketing principles and strategies</li>
                                     </ul>
-                                    <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    <div class="careers_apply_button_section">
+                                        <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
+                                    </div>
                                 </div>
                                 <img id="marketer_image" class="careers_images" src="assets/marketer.png" alt="Marketer">
                             </div>
