--- a/home.html
+++ b/home.html
@@ -50,18 +50,11 @@
                     </div>
                     <div class="serve_section">
                         <p class="section_titles">We Serve</p>
-                        <div class="serve_header">
-                            <p class="serve_text">Our business serves</p>
-                            <a class="serve_button_links" href="index.html"><p class="serve_buttons">gamers</p></a>
-                            <p class="serve_text">,</p>
-                            <a class="serve_button_links" href="sponsor.html"><p class="serve_buttons"> brands / sponsors</p></a>
-                            <p class="serve_text">, and </p>
-                            <a class="serve_button_links" href="partner.html"><p class="serve_buttons"> game developers.</p></a>
-                        </div>
                         <div class="serve_information">
                             <div class="serve_gamers">
                                 <img class="serve_images" src="assets/serve_gamers_icon.png" alt="Gamers Icon">
-                                <ul>
+                                <a class="serve_button_links" href="index.html"><p class="serve_buttons">GAMERS</p></a>
+                                <ul class="serve_list">
                                     <li class="serve_description">We make great games!</li>
                                     <li class="serve_description">We make great games!</li>
                                     <li class="serve_description">We make great games!</li>
@@ -69,7 +62,8 @@
                             </div>
                             <div class="serve_brands">
                                 <img class="serve_images" src="assets/serve_brands_icon.png" alt="Brands / Sponsors Icon">
-                                <ul>
+                                <a class="serve_button_links" href="sponsor.html"><p class="serve_buttons">BRANDS / SPONSORS</p></a>
+                                <ul class="serve_list">
                                     <li class="serve_description">We take sponsors!</li>
                                     <li class="serve_description">We take sponsors!</li>
                                     <li class="serve_description">We take sponsors!</li>
@@ -77,7 +71,8 @@
                             </div>
                             <div class="serve_developers">
                                 <img class="serve_images" src="assets/serve_developers_icon.png" alt="Game Developers Icon">
-                                <ul>
+                                <a class="serve_button_links" href="partner.html"><p class="serve_buttons">GAME DEVELOPERS</p></a>
+                                <ul class="serve_list">
                                     <li class="serve_description">We partner up with developers!</li>
                                     <li class="serve_description">We partner up with developers!</li>
                                     <li class="serve_description">We partner up with developers!</li>
